src/objects/Project__c.object
<CustomObject>
    <fields>
        <fullName>Legacy_Created_By__c</fullName>
        <label>Legacy Created By</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legacy_Created_Date__c</fullName>
        <label>Legacy Created Date</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legacy_Updated_By__c</fullName>
        <label>Legacy Updated By</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legacy_Updated_Date__c</fullName>
        <label>Legacy Updated Date</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Description__c</fullName>
        <description>User Specified</description>
        <label>Project Description</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Legacy_Id__c</fullName>
        <externalId>true</externalId>
        <label>Project Legacy Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Project</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>contains</operation>
            <value>2013</value>
        </filters>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Project Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Projects</pluralLabel>
    <sharingModel>Read</sharingModel>
    <validationRules>
        <fullName>Unique_project_name</fullName>
        <active>true</active>
        <errorConditionFormula>AND( 
ISNEW(),
VLOOKUP( $ObjectType.Project__c.Fields.Name ,  $ObjectType.Project__c.Fields.Name ,  Name)  =  Name)</errorConditionFormula>
        <errorDisplayField>Name</errorDisplayField>
        <errorMessage>Project name must be unique.</errorMessage>
    </validationRules>
</CustomObject>